@@ -1399,6 +1399,14 @@ exact if \kbd{expo} is a multiple of the exponent; this is useful when trying
 to decide whether an element is a square in a residue field for instance!
 (take \kbd{expo}$ = 2$).
 
+\fun{GEN}{nf_to_Fp_coprime}{GEN nf, GEN x, GEN modpr} a low-level simple
+variant of \tet{famat_to_nf_modideal_coprime}: \var{nf} is a true \var{nf}
+structure, \kbd{modpr} is from \kbd{zkmodprinit} attached to a prime of
+degree $1$ above the prime number $p$, and $x$ is either a number field
+element or a \kbd{famat} factorization matrix. We finally assume that
+no component of $x$ has a denominator $p$.
+
+
 What to do when the $g[i]$ are not coprime to $f$, but only $\prod
 g[i]^{e[i]}$ is? Then the situation is more complicated, and we advise to
 solve it one prime divisor of $f$ at a time. Let $v$ the valuation
