@@ -1063,7 +1063,7 @@ primecertify(GEN bnf, GEN beta, ulong p, GEN bad)
       newcol = cgetg(lb+1,t_COL);
       for (j=1; j<=lb; j++)
       {
-        GEN t = to_Fp_simple(nf, gel(beta,j), modpr);
+        GEN t = nf_to_Fp_coprime(nf, gel(beta,j), modpr);
         gel(newcol,j) = Fp_log(t,g,ord,gq);
       }
       if (DEBUGLEVEL>3)
